--- a/client/src/components/header.styles.scss
+++ b/client/src/components/header.styles.scss
@@ -1,10 +1,10 @@
 .header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
   padding-bottom: .75rem;
-  position: relative; 
   background: #00283a;
   margin-bottom: 8rem;
 
@@ -147,7 +147,6 @@
   .header {
     height: 6rem;
     padding: 0 1rem;
-    width: 100%;
     background: #00283a;
     margin-bottom: 2rem;
     justify-content: space-between;
