--- a/client/src/components/navigation-dropdown.styles.scss
+++ b/client/src/components/navigation-dropdown.styles.scss
@@ -22,11 +22,3 @@
     cursor: auto;
   }
 }
-
-@media only screen and (max-width: 960px) {
-  .navigation-dropdown {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 2rem 0;
-  }
-}
